--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,16 @@
 /* css styles */
+.boxed-math {
+    border: 1px solid #aaa;
+    padding: 1px 4px;
+    display: inline-block;
+  }
+.speaker-a {
+  font-size: 1.5em;
+  color: #2C8769;  /* 조금 연한 회색 */
+  font-weight: bold;  /* 원하면 빼도 됨 */
+}
+.speaker-c {
+  font-size: 1.5em;
+  color: #0051A2;  /* 조금 연한 회색 */
+  font-weight: bold;  /* 원하면 빼도 됨 */
+}
