--- a/styles.css
+++ b/styles.css
@@ -4,13 +4,12 @@
     padding: 1px 4px;
     display: inline-block;
   }
-.speaker-a {
-  font-size: 1.5em;
-  color: #2C8769;  /* 조금 연한 회색 */
-  font-weight: bold;  /* 원하면 빼도 됨 */
+.speaker{
+  font-size: 2em;
 }
-.speaker-c {
-  font-size: 1.5em;
-  color: #0051A2;  /* 조금 연한 회색 */
-  font-weight: bold;  /* 원하면 빼도 됨 */
+
+.figure-caption, figcaption {
+  display: block;
+  text-align: center;
+  color: #555;
 }
