--- a/styles.css
+++ b/styles.css
@@ -13,3 +13,11 @@
   text-align: center;
   color: #555;
 }
+
+.problem {
+  background-color: #f0f8ff;
+  border-left: 5px solid #1e90ff;
+  padding: 1em;
+  margin-bottom: 1em;
+  font-size: 1.1em;
+}
